--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,6 +31,7 @@ jobs:
       # Step 3: Setup Build Environment
       - name: Setup Build Environment
         run: |
+          set -e
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
             python3-pip curl git zip unzip gcc g++ make ninja-build \
@@ -46,6 +47,7 @@ jobs:
       # Step 5: Setup Python and Repo Tool
       - name: Setup Python and Repo Tool
         run: |
+          set -e
           python3 -m pip install --upgrade pip
           pip3 install gitpython xmltodict
           mkdir -p ~/.bin
@@ -58,6 +60,7 @@ jobs:
       # Step 6: Configure Build Directory
       - name: Configure Build Directory
         run: |
+          set -e
           ROOT_DIR="${ROOT_DIR_PREFIX}-$(date +'%Y-%m-%d-%I-%M-%p')-release"
           echo "ROOT_DIR=${ROOT_DIR}" >> $GITHUB_ENV
           mkdir -p "builds/${ROOT_DIR}"
@@ -66,6 +69,7 @@ jobs:
       - name: Clone Required Repositories
         working-directory: builds/${{ env.ROOT_DIR }}
         run: |
+          set -e
           repos=(
             "https://github.com/Kernel-SU/AnyKernel3 --depth=1"
             "https://gitlab.com/simonpunk/susfs4ksu.git -b gki-android14-6.1"
@@ -79,6 +83,7 @@ jobs:
       - name: Setup Kernel Source
         working-directory: builds/${{ env.ROOT_DIR }}
         run: |
+          set -e
           mkdir -p kernel_platform/oneplus13r_v
           cd kernel_platform/oneplus13r_v
           repo init -u https://github.com/OnePlusOSS/kernel_manifest.git -b oneplus/sm8650 -m oneplus_13r.xml --depth=1 || { echo "Failed to initialize repo"; exit 1; }
@@ -89,6 +94,7 @@ jobs:
       - name: Setup KernelSU
         working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v/kernel_platform
         run: |
+          set -e
           curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh" | bash -s next
           git submodule update --init --recursive
           cd KernelSU-Next/kernel
@@ -101,8 +107,6 @@ jobs:
         working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v/kernel_platform
         run: |
           set -euxo pipefail
-          git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-android14-6.1
-          git clone https://github.com/WildPlusKernel/kernel_patches.git
           cp susfs4ksu/kernel_patches/50_add_susfs_in_gki-android14-6.1.patch ./common/
           cp kernel_patches/next/0001-kernel-patch-susfs-v1.5.5-to-KernelSU-Next-v1.0.5.patch ./KernelSU-Next/
           cp kernel_patches/next/syscall_hooks.patch ./common/
@@ -163,6 +167,7 @@ jobs:
       - name: Run sed Commands
         working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v/kernel_platform
         run: |
+          set -e
           echo "Running sed commands..."
           sed -i 's/check_defconfig//' ./common/build.config.gki
           sed -i 's/-dirty//' ./common/scripts/setlocalversion
@@ -174,8 +179,9 @@ jobs:
       - name: Build Kernel
         working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v/
         run: |
+          set -e
           cd kernel_platform
-          mkdir out
+          mkdir -p out
           export PATH="/usr/lib/ccache:$PATH"
           ./build_with_bazel.py \
             -t pineapple \
@@ -192,6 +198,7 @@ jobs:
       - name: Create ZIP Package
         working-directory: builds/${{ env.ROOT_DIR }}
         run: |
+          set -e
           if [ ! -f kernel_platform/oneplus13r_v/kernel_platform/out/dist/Image ]; then
             echo "❌ Kernel image not found"
             exit 1
