--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
       # Step 1: Checkout Code
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       # Step 2: Free Disk Space
       - name: Free Disk Space
@@ -27,7 +27,6 @@ jobs:
           sudo apt-get update -qq
           sudo apt-get install -qq curl
           curl -fsSL https://raw.githubusercontent.com/kou/arrow/e49d8ae15583ceff03237571569099a6ad62be32/ci/scripts/util_free_space.sh | bash
-
       # Step 3: Setup Build Environment
       - name: Setup Build Environment
         run: |
@@ -36,7 +35,6 @@ jobs:
             python3-pip curl git zip unzip gcc g++ make ninja-build \
             bc bison flex libssl-dev libelf-dev wget build-essential \
             python3-dev python3-setuptools rsync ccache cmake libdw-dev zlib1g-dev
-
       # Step 4: Setup ccache
       - name: Setup ccache
         uses: hendrikmuhs/ccache-action@v1.2
@@ -54,14 +52,12 @@ jobs:
           echo "$HOME/.bin" >> $GITHUB_PATH
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
-
       # Step 6: Configure Build Directory
       - name: Configure Build Directory
         run: |
           ROOT_DIR="${ROOT_DIR_PREFIX}-$(date +'%Y-%m-%d-%I-%M-%p')-release"
           echo "ROOT_DIR=${ROOT_DIR}" >> $GITHUB_ENV
           mkdir -p "builds/${ROOT_DIR}"
-
       # Step 7: Clone Required Repositories
       - name: Clone Required Repositories
         working-directory: builds/${{ env.ROOT_DIR }}
@@ -74,7 +70,6 @@ jobs:
           for repo in "${repos[@]}"; do
             git clone $repo || { echo "Failed to clone $repo"; exit 1; }
           done
-
       # Step 8: Setup Kernel Source
       - name: Setup Kernel Source
         working-directory: builds/${{ env.ROOT_DIR }}
@@ -84,7 +79,6 @@ jobs:
           repo init -u https://github.com/OnePlusOSS/kernel_manifest.git -b oneplus/sm8650 -m oneplus_13r.xml --depth=1 || { echo "Failed to initialize repo"; exit 1; }
           repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags || { echo "Failed to sync repo"; exit 1; }
           rm -rf ./kernel_platform/common/android/abi_gki_protected_exports_*
-
       # Step 9: Setup KernelSU
       - name: Setup KernelSU
         working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v/kernel_platform
@@ -95,7 +89,6 @@ jobs:
           KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
           echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
           sed -i "s/DKSU_VERSION=11998/DKSU_VERSION=${KSU_VERSION}/" Makefile
-
       # Step 10: Setup SUSFS
       - name: Setup SUSFS
         working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v/kernel_platform
@@ -117,7 +110,6 @@ jobs:
             patch -p1 -F 3 < 69_hide_stuff.patch || true
           fi
           patch -p1 -F 3 < syscall_hooks.patch || true
-
       # Step 11: Configure Kernel
       - name: Configure Kernel
         working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v/kernel_platform
@@ -141,7 +133,7 @@ jobs:
             "CONFIG_KSU_SUSFS_HIDE_KSU_SUSFS_SYMBOLS=y"
             "CONFIG_KSU_SUSFS_SPOOF_CMDLINE_OR_BOOTCONFIG=y"
             "CONFIG_KSU_SUSFS_OPEN_REDIRECT=y"
-            "CONFIG_KSU_SUS_SU=n"
+            "CONFIG_KSU_SUSFS_SUS_SU=n"
             "CONFIG_TMPFS_XATTR=y"
             "CONFIG_TMPFS_POSIX_ACL=y"
             "CONFIG_IP_NF_TARGET_TTL=y"
@@ -158,7 +150,6 @@ jobs:
             echo "$CONFIG" >> ./common/arch/arm64/configs/gki_defconfig
           done
           sed -i '2s/check_defconfig//' ./common/build.config.gki
-
       # Step 12: Run sed Commands
       - name: Run sed Commands
         working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v/kernel_platform
@@ -169,7 +160,6 @@ jobs:
           sed -i 's/-dirty//' ./msm-kernel/scripts/setlocalversion
           sed -i 's/-dirty//' ./external/dtc/scripts/setlocalversion
           sed -i 's/-dirty//' ./build/kernel/kleaf/workspace_status_stamp.py || echo "No workspace_status_stamp.py!"
-
       # Step 13: Build Kernel
       - name: Build Kernel
         working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v/
@@ -187,9 +177,8 @@ jobs:
             --ignore_missing_projects \
             --lto=thin \
             -o "$(pwd)/out" || { echo "Bazel build failed"; exit 1; }
-
-      # Step 14: Make AnyKernel3
-      - name: Make AnyKernel3
+      # Step 14: Create ZIP Package
+      - name: Create ZIP Package
         working-directory: builds/${{ env.ROOT_DIR }}
         run: |
           if [ ! -f kernel_platform/oneplus13r_v/kernel_platform/out/dist/Image ]; then
@@ -203,7 +192,7 @@ jobs:
           zip -r "../$ZIP_NAME" ./* || { echo "❌ Failed to create zip file"; exit 1; }
           ls -lh "../$ZIP_NAME"
           echo "zip_name=$ZIP_NAME" >> $GITHUB_ENV
-
+          
       # Step 15: Download Latest SUSFS Module from CI        
       - name: Download Latest SUSFS Module from CI        
         run: |
