--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -206,9 +206,9 @@ jobs:
           cp ksu_module_susfs.zip ./AnyKernel3/
 
       # Step 16: Upload Build Artifacts
+     # Step 15: Upload Build Artifacts
       - name: Upload Build Artifacts
-        if: always() # Ensure this step always runs
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: kernel-${{ env.ROOT_DIR }}
           path: builds/${{ env.ROOT_DIR }}/*.zip
